# OpenStack-Swift

./: README  README.md  requirements.txt  setup.cfg
etc/: proxy-server.conf-sample
ringinfo/: gziptojson.py  gziptojsonmiddleware.py
