[metadata]
name = ringinfo
version = 0.1.0
summary = IQIYI Ringinfo Production Middleware
description-file = README
author = Jianfeng Xu
author-email = xujianfeng_sx@qiyi.com
home-page = http://scm.qiyi.virtual/groups/cloudstorage
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7

[pbr]
skip_authors = True
skip_changelog = True

[files]
packages =
    ringinfo

[entry_points]
paste.filter_factory =
    ringinfo = ringinfo.gziptojsonmiddleware:filter_factory
